--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
         <div class="logo">
             <a href="index.html">
-                <img src="img/devjane.png" alt="">
+                sanath.tech
             </a>
         </div>
         <button class="nav-toggle" aria-label="toggle navigation">
