updated logo and portfolio item

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
         <div class="logo">
             <a href="index.html">
-                sanath.tech
+                <img src="img/sanath-tech.png" alt="">
             </a>
         </div>
         <button class="nav-toggle" aria-label="toggle navigation">
