--- a/portfolio-item.html
+++ b/portfolio-item.html
@@ -21,7 +21,7 @@
     <header>
         <div class="logo">
             <a href="index.html">
-                <img src="img/devjane.png" alt="">
+                <img src="img/sanath-tech.png" alt="">
             </a>
         </div>
         <button class="nav-toggle" aria-label="toggle navigation">
