--- a/index.html
+++ b/index.html
@@ -109,18 +109,18 @@
             </a>
 
             <!-- Portfolio item 02 -->
-            <a href="portfolio-item-01.html" class="portfolio__item">
-                <img src="img/portfolio-02.jpg" alt="" class="portfolio__img">
+            <a href="portfolio-item-02.html" class="portfolio__item">
+                <img src="img/dojo-blogs-01.jpg" alt="" class="portfolio__img">
             </a>
 
             <!-- Portfolio item 03 -->
-            <a href="portfolio-item-01.html" class="portfolio__item">
-                <img src="img/portfolio-03.jpg" alt="" class="portfolio__img">
+            <a href="portfolio-item-03.html" class="portfolio__item">
+                <img src="img/task-tracker-03.jpg" alt="" class="portfolio__img">
             </a>
 
             <!-- Portfolio item 04 -->
-            <a href="portfolio-item-01.html" class="portfolio__item">
-                <img src="img/portfolio-04.jpg" alt="" class="portfolio__img">
+            <a href="portfolio-item-04.html" class="portfolio__item">
+                <img src="img/tv-series-01.jpg" alt="" class="portfolio__img">
             </a>
         </div>
     </section>
